--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <h1 class="uk-card-title" style="text-align: center; margin-top:5%;">Birthday Gift List</h1>
+    <h1 class="uk-card-title" style="text-align: center; margin-top:5%; color:azure; font-size:3rem;"><strong><u>Birthday Gift List</u></strong></h1>
     <br>
     <!-- Card 1 -->
 
