--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 </head>
 
 <body>
-    <h1 class="uk-card-title" style="text-align: center; margin-top:5%; color:azure; font-size:3rem;"><strong><u>Birthday Gift List</u></strong></h1>
+    <h1 class="uk-card-title" style="text-align: center; margin-top:5%; color:azure; font-size:3rem;"><strong>Birthday Gift List</strong> </h1>
+    <img src="/images/anime2.png" style="width: 10rem;" alt="Anime Image" class="uk-align-center uk-margin-top">
     <br>
     <!-- Card 1 -->
 
@@ -34,13 +35,15 @@
                             Smart Bracelet
                         </h3>
                         <p class="card-text">
-                            <strong>Description:</strong> A smart bracelet that tracks your fitness and health.
+                            <strong>Description:</strong> A smart bracelet that tracks <u><strong>sleeping</strong></u>
                             <br>
-                            <span><em>Any brand or kind of health tracker it does not matter</em></span>
+                            <span><em>Any brand or kind of sleep tracker it does not matter <br>
+                            <u>I really want something like this </u>
+                            </em></span>
                         </p>
                         <p class="card-text">
                             <strong style="color: royalblue;">
-                    Price: $116
+                    Price: ~$116
                 </strong>
                         </p>
                         <button class="btn btn-primary">
@@ -57,22 +60,22 @@
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div style="text-align: center; padding:40px">
-                        <img src="/images/band.png" alt="" style="height: 50%;">
+                        <img src="/images/bulb.png" alt="" style="height: 50%;">
                         <h3 class="card-title">
-                            Smart Bracelet
+                            Smart Light Bulb
                         </h3>
                         <p class="card-text">
-                            <strong>Description:</strong> A smart bracelet that tracks your fitness and health.
+                            <strong>Description:</strong> A smart light bulb
                             <br>
-                            <span><em>Any brand or kind of health tracker it does not matter</em></span>
+                            <span><em>Needs to be govee branded <br> <u>I really want this</u>  </em></span>
                         </p>
                         <p class="card-text">
                             <strong style="color: royalblue;">
-                    Price: $50
+                    Price: ~$70
                 </strong>
                         </p>
                         <button class="btn btn-primary">
-                    <a href = "https://www.amazon.ca/Bracelet-Wearable-Activity-Continuous-Wristband/dp/B0F2SZB85W/ref=sxin_15_pa_sp_search_thematic_sspa?content-id=amzn1.sym.aa7f6a5e-4bda-4c9c-9d81-07fa27aa07fb%3Aamzn1.sym.aa7f6a5e-4bda-4c9c-9d81-07fa27aa07fb&crid=QH7AVSLH4TOI&cv_ct_cx=health%2Bband&keywords=health%2Bband&pd_rd_i=B0F2SZB85W&pd_rd_r=b5ebc918-b9ff-4731-9d6c-07aaa95d9631&pd_rd_w=xsX6O&pd_rd_wg=dl4y1&pf_rd_p=aa7f6a5e-4bda-4c9c-9d81-07fa27aa07fb&pf_rd_r=JXY3H1S5B5WMAAX24RHG&qid=1747251998&sbo=RZvfv%2F%2FHxDF%2BO5021pAnSA%3D%3D&sprefix=health%2Bban%2Caps%2C119&sr=1-1-0db4faf6-3485-4ed7-80e2-7395e0b5d027-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWM&th=1" target = "_blank" style="color: white; text-decoration: none;">
+                    <a href = "https://a.co/d/aOYxjbS" target = "_blank" style="color: white; text-decoration: none;">
                         Go To Amazon
                     </a>
                 </button>
@@ -86,28 +89,308 @@
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div style="text-align: center; padding:40px">
-                        <img src="/images/band.png" alt="" style="height: 50%;">
+                        <img src="/images/mic.png" alt="" style="height: 50%;">
                         <h3 class="card-title">
-                            Smart Bracelet
+                            Micorphone
                         </h3>
                         <p class="card-text">
-                            <strong>Description:</strong> A smart bracelet that tracks your fitness and health.
+                            <strong>Description:</strong> Microphone for my computer
                             <br>
-                            <span><em>Any brand or kind of health tracker it does not matter</em></span>
+                            <span><em>Just need a high quality one</em></span>
                         </p>
                         <p class="card-text">
                             <strong style="color: royalblue;">
-                    Price: $50
+                    Price: ~$150
                 </strong>
                         </p>
                         <button class="btn btn-primary">
-                    <a href = "https://www.amazon.ca/Bracelet-Wearable-Activity-Continuous-Wristband/dp/B0F2SZB85W/ref=sxin_15_pa_sp_search_thematic_sspa?content-id=amzn1.sym.aa7f6a5e-4bda-4c9c-9d81-07fa27aa07fb%3Aamzn1.sym.aa7f6a5e-4bda-4c9c-9d81-07fa27aa07fb&crid=QH7AVSLH4TOI&cv_ct_cx=health%2Bband&keywords=health%2Bband&pd_rd_i=B0F2SZB85W&pd_rd_r=b5ebc918-b9ff-4731-9d6c-07aaa95d9631&pd_rd_w=xsX6O&pd_rd_wg=dl4y1&pf_rd_p=aa7f6a5e-4bda-4c9c-9d81-07fa27aa07fb&pf_rd_r=JXY3H1S5B5WMAAX24RHG&qid=1747251998&sbo=RZvfv%2F%2FHxDF%2BO5021pAnSA%3D%3D&sprefix=health%2Bban%2Caps%2C119&sr=1-1-0db4faf6-3485-4ed7-80e2-7395e0b5d027-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWM&th=1" target = "_blank" style="color: white; text-decoration: none;">
+                    <a href = "https://a.co/d/3xQBeCb" target = "_blank" style="color: white; text-decoration: none;">
                         Go To Amazon
                     </a>
                 </button>
                     </div>
                 </div>
             </div>
+
+
+
+            <!-- Card 4 -->
+
+
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div style="text-align: center; padding:40px">
+                        <img src="/images/massage.png" alt="" style="height: 50%;">
+                        <h3 class="card-title">
+                            Micorphone
+                        </h3>
+                        <p class="card-text">
+                            <strong>Description:</strong> Massage gun
+                            <br>
+                            <span><em>Any kind</em></span>
+                        </p>
+                        <p class="card-text">
+                            <strong style="color: royalblue;">
+                    Price: ~$62
+                </strong>
+                        </p>
+                        <button class="btn btn-primary">
+                    <a href = "https://a.co/d/1rCFNk2" target = "_blank" style="color: white; text-decoration: none;">
+                        Go To Amazon
+                    </a>
+                </button>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- Card 5 -->
+
+
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div style="text-align: center; padding:40px">
+                        <img src="/images/knee.png" alt="" style="height: 50%;">
+                        <h3 class="card-title">
+                            Knee Massager Machine
+                        </h3>
+                        <p class="card-text">
+                            <strong>Description:</strong> Knee Massager Machine
+                            <br>
+                            <span><em>Any kind <u>I really want this</u></em></span>
+                        </p>
+                        <p class="card-text">
+                            <strong style="color: royalblue;">
+                    Price: ~$110
+                </strong>
+                        </p>
+                        <button class="btn btn-primary">
+                    <a href = "https://a.co/d/hEPZYGc" target = "_blank" style="color: white; text-decoration: none;">
+                        Go To Amazon
+                    </a>
+                </button>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <!-- Card 6 -->
+
+
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div style="text-align: center; padding:40px">
+                        <img src="/images/shorts.png" alt="" style="height: 50%;">
+                        <h3 class="card-title">
+                            Padded Shorts
+                        </h3>
+                        <p class="card-text">
+                            <strong>Description:</strong> Padded basketball shorts
+                            <br>
+                            <span><em>Any kind</em></span>
+                        </p>
+                        <p class="card-text">
+                            <strong style="color: royalblue;">
+                    Price: ~$42
+                </strong>
+                        </p>
+                        <button class="btn btn-primary">
+                    <a href = "https://a.co/d/54EskK1" target = "_blank" style="color: white; text-decoration: none;">
+                        Go To Amazon
+                    </a>
+                </button>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <!-- Card 7 -->
+
+
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div style="text-align: center; padding:40px">
+                        <img src="/images/earphones.png" alt="" style="height: 50%;">
+                        <h3 class="card-title">
+                            In ear Headphones
+                        </h3>
+                        <p class="card-text">
+                            <strong>Description:</strong> In ear headphones
+                            <br>
+                            <span><em>Any kind</em></span>
+                        </p>
+                        <p class="card-text">
+                            <strong style="color: royalblue;">
+                    Price: ~$36
+                </strong>
+                        </p>
+                        <button class="btn btn-primary">
+                    <a href = "https://a.co/d/7KHIppF" target = "_blank" style="color: white; text-decoration: none;">
+                        Go To Amazon
+                    </a>
+                </button>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <!-- Card 8 -->
+
+
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div style="text-align: center; padding:40px">
+                        <img src="/images/backpack.png" alt="" style="height: 50%;">
+                        <h3 class="card-title">
+                            Work Backpack
+                        </h3>
+                        <p class="card-text">
+                            <strong>Description:</strong> Travel Work Backpack
+                            <br>
+                            <span><em>Any kind</em></span>
+                        </p>
+                        <p class="card-text">
+                            <strong style="color: royalblue;">
+                    Price: ~$40
+                </strong>
+                        </p>
+                        <button class="btn btn-primary">
+                    <a href = "https://a.co/d/bj59HAA" target = "_blank" style="color: white; text-decoration: none;">
+                        Go To Amazon
+                    </a>
+                </button>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <!-- Card 9 -->
+
+
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div style="text-align: center; padding:40px">
+                        <img src="/images/underwear.png" alt="" style="height: 50%;">
+                        <h3 class="card-title">
+                            Compression shorts
+                        </h3>
+                        <p class="card-text">
+                            <strong>Description:</strong> Compression Shorts Men
+                            <br>
+                            <span><em>Any kind <u>I really want this</u></em></span>
+                        </p>
+                        <p class="card-text">
+                            <strong style="color: royalblue;">
+                    Price: ~$36
+                </strong>
+                        </p>
+                        <button class="btn btn-primary">
+                    <a href = "https://a.co/d/96lcMYd" target = "_blank" style="color: white; text-decoration: none;">
+                        Go To Amazon
+                    </a>
+                </button>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+            <!-- Card 10 -->
+
+
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div style="text-align: center; padding:40px">
+                        <img src="/images/shirt.png" alt="" style="height: 50%;">
+                        <h3 class="card-title">
+                            Oversized Cotton Summer T-Shirts
+                        </h3>
+                        <p class="card-text">
+                            <strong>Description:</strong> 3 Pcs Men's Oversized Cotton Summer T-Shirts - Vintage Baggy Tee Loose Fit Short Sleeve T-Shirts Casual Streetwear
+                            <br>
+                            <span><em><u>2XL I really want this</u></em></span>
+                        </p>
+                        <p class="card-text">
+                            <strong style="color: royalblue;">
+                    Price: ~$50
+                </strong>
+                        </p>
+                        <button class="btn btn-primary">
+                    <a href = "https://a.co/d/hCgBpyg" target = "_blank" style="color: white; text-decoration: none;">
+                        Go To Amazon
+                    </a>
+                </button>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+            <!-- Card 11 -->
+
+
+            <!-- <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div style="text-align: center; padding:40px">
+                        <img src="/images/wallet.png" alt="" style="height: 50%;">
+                        <h3 class="card-title">
+                            Air Tag Wallet
+                        </h3>
+                        <p class="card-text">
+                            <strong>Description:</strong> KS Mens Wallet Airtag or Standard Use,Slim Leather Wallet Money Clip Gift for Men 11 Cards RFID Blocking
+                            <br>
+                            <span><em><u> I really want this</u></em></span>
+                        </p>
+                        <p class="card-text">
+                            <strong style="color: royalblue;">
+                    Price: ~$30
+                </strong>
+                        </p>
+                        <button class="btn btn-primary">
+                    <a href = "https://a.co/d/dtiPbm5" target = "_blank" style="color: white; text-decoration: none;">
+                        Go To Amazon
+                    </a>
+                </button>
+                    </div>
+                </div>
+            </div> -->
+
+
+            <!-- Card 12 -->
+
+
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div style="text-align: center; padding:40px">
+                        <img src="/images/wallet2.png" alt="" style="height: 50%;">
+                        <h3 class="card-title">
+                            Air Tag Wallet
+                        </h3>
+                        <p class="card-text">
+                            <strong>Description:</strong> Carbon fiber one
+                            <br>
+                            <span><em><u> I really want this</u></em></span>
+                        </p>
+                        <p class="card-text">
+                            <strong style="color: royalblue;">
+                    Price: ~$60
+                </strong>
+                        </p>
+                        <button class="btn btn-primary">
+                    <a href = "https://a.co/d/ghFeRZf" target = "_blank" style="color: white; text-decoration: none;">
+                        Go To Amazon
+                    </a>
+                </button>
+                    </div>
+                </div>
+            </div>
+
 
         </div>
 
