--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Birthday Gift List</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="icon" type="image/x-icon" href="../images/hat.ico">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="css/uikit.min.css" />
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
@@ -21,7 +22,7 @@
 
 <body>
     <h1 class="uk-card-title" style="text-align: center; margin-top:5%; color:azure; font-size:3rem;"><strong>Birthday Gift List</strong> </h1>
-    <img src="/images/anime2.png" style="width: 10rem;" alt="Anime Image" class="uk-align-center uk-margin-top">
+    <img src="../images/anime2.png" style="width: 10rem;" alt="Anime Image" class="uk-align-center uk-margin-top">
     <br>
     <!-- Card 1 -->
 
