--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div style="text-align: center; padding:40px">
-                        <img src="/images/band.png" alt="" style="height: 50%;">
+                        <img src="../images/band.png" alt="" style="height: 50%;">
                         <h3 class="card-title">
                             Smart Bracelet
                         </h3>
@@ -61,7 +61,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div style="text-align: center; padding:40px">
-                        <img src="/images/bulb.png" alt="" style="height: 50%;">
+                        <img src="../images/bulb.png" alt="" style="height: 50%;">
                         <h3 class="card-title">
                             Smart Light Bulb
                         </h3>
@@ -90,7 +90,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div style="text-align: center; padding:40px">
-                        <img src="/images/mic.png" alt="" style="height: 50%;">
+                        <img src="../images/mic.png" alt="" style="height: 50%;">
                         <h3 class="card-title">
                             Micorphone
                         </h3>
@@ -121,7 +121,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div style="text-align: center; padding:40px">
-                        <img src="/images/massage.png" alt="" style="height: 50%;">
+                        <img src="../images/massage.png" alt="" style="height: 50%;">
                         <h3 class="card-title">
                             Micorphone
                         </h3>
@@ -151,7 +151,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div style="text-align: center; padding:40px">
-                        <img src="/images/knee.png" alt="" style="height: 50%;">
+                        <img src="../images/knee.png" alt="" style="height: 50%;">
                         <h3 class="card-title">
                             Knee Massager Machine
                         </h3>
@@ -182,7 +182,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div style="text-align: center; padding:40px">
-                        <img src="/images/shorts.png" alt="" style="height: 50%;">
+                        <img src="../images/shorts.png" alt="" style="height: 50%;">
                         <h3 class="card-title">
                             Padded Shorts
                         </h3>
@@ -213,7 +213,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div style="text-align: center; padding:40px">
-                        <img src="/images/earphones.png" alt="" style="height: 50%;">
+                        <img src="../images/earphones.png" alt="" style="height: 50%;">
                         <h3 class="card-title">
                             In ear Headphones
                         </h3>
@@ -244,7 +244,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div style="text-align: center; padding:40px">
-                        <img src="/images/backpack.png" alt="" style="height: 50%;">
+                        <img src="../images/backpack.png" alt="" style="height: 50%;">
                         <h3 class="card-title">
                             Work Backpack
                         </h3>
@@ -275,7 +275,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div style="text-align: center; padding:40px">
-                        <img src="/images/underwear.png" alt="" style="height: 50%;">
+                        <img src="../images/underwear.png" alt="" style="height: 50%;">
                         <h3 class="card-title">
                             Compression shorts
                         </h3>
@@ -307,7 +307,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div style="text-align: center; padding:40px">
-                        <img src="/images/shirt.png" alt="" style="height: 50%;">
+                        <img src="../images/shirt.png" alt="" style="height: 50%;">
                         <h3 class="card-title">
                             Oversized Cotton Summer T-Shirts
                         </h3>
@@ -369,7 +369,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div style="text-align: center; padding:40px">
-                        <img src="/images/wallet2.png" alt="" style="height: 50%;">
+                        <img src="../images/wallet2.png" alt="" style="height: 50%;">
                         <h3 class="card-title">
                             Air Tag Wallet
                         </h3>
