--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div style="text-align: center; padding:40px">
-                        <img src="images/band.png" alt="" style="height: 50%;">
+                        <img src="images/band.png" alt="" style="height: 5rem;">
                         <h3 class="card-title">
                             Smart Bracelet
                         </h3>
