--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <div style="text-align: center; padding:40px">
                         <img src="images/shorts.png" alt="" style="height: 15rem !important;">
                         <h3 class="card-title">
-                            Padded Shorts
+                            2XL Padded Shorts
                         </h3>
                         <p class="card-text">
                             <strong>Description:</strong> Padded basketball shorts
@@ -309,7 +309,7 @@
                     <div style="text-align: center; padding:40px">
                         <img src="images/shirt.png" alt="" style="height: 15rem !important;">
                         <h3 class="card-title">
-                            Oversized Cotton Summer T-Shirts
+                            Oversized Cotton Summer T-Shirts 2XL
                         </h3>
                         <p class="card-text">
                             <strong>Description:</strong> 3 Pcs Men's Oversized Cotton Summer T-Shirts - Vintage Baggy Tee Loose Fit Short Sleeve T-Shirts Casual Streetwear
