--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     <h1 class="uk-card-title" style="text-align: center; margin-top:5%; color:azure; font-size:3rem;"><strong>Birthday Gift List</strong> </h1>
     <img src="images/anime2.png" style="width: 10rem;" alt="Anime Image" class="uk-align-center uk-margin-top">
     <br>
+
+    <em>
+Disclaimer: All items are approximately priced <br>
+    <u>All items are ideas if you have better versions or options please get that instead.</u> <br>
+    <u>All items are linked to their respective Amazon pages.</u> <br>
+    <u>Certain items I want and are labelled so.</u>
+</em>
+
+    <br>
     <!-- Card 1 -->
 
     <div class="container cont" style="margin-top: 5%;">
