--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <img src="images/anime2.png" style="width: 10rem;" alt="Anime Image" class="uk-align-center uk-margin-top">
     <br>
 
-    <em class="uk-align-center uk-margin-top" style="width: 100%;">
-Disclaimer: All items are approximately priced <br>
+    <em class="uk-align-center uk-margin-top" style="width: 100%; text-align: center;">
+<strong>Disclaimer:</strong> All items are approximately priced <br>
     <u>All items are ideas if you have better versions or options please get that instead.</u> <br>
     <u>All items are linked to their respective Amazon pages.</u> <br>
     <u>Certain items I want and are labelled so.</u>
