--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <h1 class="uk-card-title" style="text-align: center; margin-top:5%; color:azure; font-size:3rem;"><strong>Birthday Gift List</strong> </h1>
-    <img src="images/anime2.png" style="width: 10rem;" alt="Anime Image" class="uk-align-center uk-margin-top">
+    <img src="images/anime2.png" style="width: 10rem; border-radius:30px;" alt="Anime Image" class="uk-align-center uk-margin-top">
     <br>
 
     <em class="uk-align-center uk-margin-top" style="width: 100%; text-align: center; color:azure !important;">
